--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dom": "^19.1.0",
     "react-grid-layout": "^1.5.1",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
